--- a/style.css
+++ b/style.css
@@ -23,8 +23,6 @@ main {
 
 
 #lookup-box{
-
-    background: #f0f8ff;
     padding: 5px;
 }
 
@@ -33,8 +31,9 @@ main {
     border: 2px dashed black;
     background: #d8edff;
     overflow-y: scroll;
-    margin: 5px;
+    margin: auto;
     max-height: 80vh;
+    width: 90%;
     scroll-behavior: smooth;
 }
 
@@ -88,6 +87,11 @@ h1 {
 #searchbar, input {
 
     text-align: center;
+    margin: auto;
+    margin-bottom: 10px;
+    line-height: 32px;
+    padding: 0 100px;
+    font-size: 16px;
 }
 
 #mode-toggle {
@@ -207,4 +211,14 @@ h1 {
         color: red;
         font-size: large;
     }
+}
+
+#part-search-list-instruction {
+
+    font-size: small;
+    margin: auto;
+    width: 100%;
+    color: white;
+    background: black;
+    padding: 20px;
 }
