--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ main {
     background: #d8edff;
     overflow-y: scroll;
     margin: auto;
-    max-height: 80vh;
+    max-height: 65vh;
     width: 90%;
     scroll-behavior: smooth;
 }
@@ -84,14 +84,22 @@ h1 {
     margin: 20px;
 }
 
-#searchbar, input {
+#searchbar {
 
+    display: flex;
+    justify-content: center;
+}
+
+#searchbar input {
+
+    margin-top: 5vh;
     text-align: center;
-    margin: auto;
-    margin-bottom: 10px;
+    margin-bottom: 2.5vh;
     line-height: 32px;
-    padding: 0 100px;
+    padding: 0 125px;
     font-size: 16px;
+    border: 3px inset black;
+    background: #cfdfef;
 }
 
 #mode-toggle {
